Layout fixes for wide messages (#58)
* Fixed layout issue with wide messages

* Fix for long header in IE

* Version bump

--- a/app/components/styles/ChatContainer.scss
+++ b/app/components/styles/ChatContainer.scss
@@ -57,6 +57,7 @@ $chatContainerBottomRight: 24px;
     font-weight: 300;
     font-size: 14px;
     padding: 0 30px;
+    align-items: stretch;
   }
 
   .banner {
