--- a/app/components/styles/Message.scss
+++ b/app/components/styles/Message.scss
@@ -16,7 +16,6 @@
   word-wrap: break-word;
   background: #fff;
   border: 1px solid #eaeaea;
-  max-width: 80%;
   padding: 8px;
   margin: 8px 16px;
   border-radius: 5px;
@@ -24,6 +23,10 @@
   text-align: left;
   animation: 0.2s 1 messageEnter;
   position: relative;
+  overflow: hidden;
+  hyphens: auto;
+
+  margin-right: 50px;
 
   a {
     color: #2199e8;
@@ -42,6 +45,8 @@
 
   &.fromCustomer {
     align-self: flex-end;
+    margin-left: 50px;
+    margin-right: 16px;
     color: #fff;
 
     a {
